[package]
name = "minicon"
version = "0.1.0"
authors = ["smiyaguchi <smiyaguchi96@gmail.com>"]
description = "minicon is minimal container runtime."

[dependencies]
clap = {version = "2.30", features = ["yaml"]}
error-chain = "0.11.0"
libc = "0.2"
nix = "0.10.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
